<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/activity_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.mustdo.cambook.Ui.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:text="@string/logo"
            android:textColor="#5185C7"
            android:textSize="43sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="185dp"
            android:layout_height="38dp"
            android:layout_above="@+id/btn2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@mipmap/rect"
            android:gravity="center"
            android:text="@string/photo"
            android:textColor="#5185C7" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="185dp"
            android:layout_height="38dp"
            android:layout_above="@+id/btn3"
            android:layout_alignLeft="@+id/btn3"
            android:layout_alignStart="@+id/btn3"
            android:layout_marginBottom="24dp"
            android:background="@mipmap/rect"

            android:text="@string/gallery"
            android:textColor="#5185C7" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="185dp"
            android:layout_height="38dp"
            android:layout_above="@+id/btn4"
            android:layout_alignLeft="@+id/btn4"
            android:layout_alignStart="@+id/btn4"
            android:layout_marginBottom="22dp"
            android:background="@mipmap/rect"
            android:text="@string/timetable"
            android:textColor="#5185C7" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="185dp"
            android:layout_height="38dp"
            android:layout_alignLeft="@+id/btn1"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btn1"
            android:layout_marginBottom="91dp"
            android:background="@mipmap/rect"

            android:text="@string/setting"
            android:textColor="#5185C7" />


        <Button
            android:id="@+id/btn5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@mipmap/btn5" />
    </RelativeLayout>
</layout>