<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:background="@color/colorBlackLight"
        >
        <TextView
            android:layout_alignParentLeft="true"
            android:text="@string/menu_select"
            android:textColor="@color/colorFont"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:orientation="vertical"
        android:layout_height="100dp"
        android:padding="25dp"
        android:background="@color/colorWhiteLight"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        >
           <Spinner
               android:id="@+id/spinnerSub"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center"
               android:spinnerMode="dropdown"/>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/popupCancel"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/colorBlackLight"
            />
        <Button
            android:id="@+id/popupSubmit"
            android:text="@string/submit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@color/colorBlackLight"
            />

    </LinearLayout>

</LinearLayout>