<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="267dp"
        android:layout_height="208.6dp"
        android:background="#ffffff"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="155.3dp"
            android:orientation="vertical">
            <TextView
                android:background="@color/colorBlackLight"
                android:layout_width="match_parent"
                android:layout_height="53.3dp"
                android:gravity="center"
                android:textSize="18.5sp"
                android:text="@string/menu_select"
                android:textColor="@color/colorFont"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:background="@color/colorWhiteLight"
                android:layout_weight="1"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <Spinner
                        android:id="@+id/spinnerSub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:spinnerMode="dropdown"/>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>



        <LinearLayout
            android:background="@color/colorBlackLight"
            android:layout_width="match_parent"
            android:layout_height="53.3dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_ract"
                android:textSize="18.5sp"
                android:textColor="@color/colorFont"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btn_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_ract"
                android:textSize="18.5sp"
                android:textColor="@color/colorFont"
                android:text="@string/menu_move" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
