<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:weightSum="100"
        tools:context="com.mustdo.cambook.Ui.FindPwdActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9.3"
            android:background="@drawable/blue_ract_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="100">

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.9" />

            <ImageButton
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5.3"
                android:background="@mipmap/back" />

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="21.3" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="34.9"
                android:gravity="center"
                android:text="@string/findpw"
                android:textColor="#ffffff"
                android:textSize="20.3sp" />
        </LinearLayout>


        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4.1" />

        <LinearLayout
            android:layout_width="325dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:background="@drawable/gray_underline"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="10.8dp"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/check_1" />

            <android.support.v4.widget.Space
                android:layout_width="6dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:singleLine="true"
                android:text="@string/email"
                android:textColor="#9b9b9b"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:ems="15"
                android:focusable="true"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textColor="#4a4a4a"
                android:textCursorDrawable="@null"
                android:textSize="13sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/email_delete"
                android:layout_width="14.3dp"
                android:layout_height="14.3dp"
                android:layout_gravity="center"
                android:background="@mipmap/delete"
                android:onClick="textDelete"
                android:visibility="invisible" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="73" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8.6"
            android:background="@drawable/blue_ract_bg"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textSize="18.5sp" />


    </LinearLayout>
</layout>